--- a/lokesh/templates/lokesh/index.html
+++ b/lokesh/templates/lokesh/index.html
@@ -14,7 +14,7 @@
         {{mypost.title}}
     </h1>
     <p>
-        {{mypost.description}}
+        {{mypost.titledescription}}
 
     </p>
     {%endfor%}
