--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,10 @@
+*{
+    box-sizing: border-box;
+    background-color:#dbdbdb;
+    color: black;
+}
+
 .header {
-    border: 1px solid black;
+    border: 1px solid whitesmoke;
+  
 }
